--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "micro": "latest",
+    // "micro": "latest",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start": "micro",
+    // "start": "micro",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
