--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "better-playlists",
   "version": "0.1.0",
+  "engines": {
+    "node": "5.12.0"
+  },
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
