re-Configure package-lock correctly

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "better-playlists",
   "version": "0.1.0",
-  "engines": {
-    "node": "9.2.1"
+  "now": {
+    "engines": {
+      "node": "9.2.1"
+    }
   },
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "micro": "latest",
     "react-scripts": "1.0.17"
   },
   "scripts": {
